--- a/dev/jade/kontakt.jade
+++ b/dev/jade/kontakt.jade
@@ -17,7 +17,7 @@ block page_content
 					p Feel free to talk to our online representative at any time you please using our Live Chat system on our website or one of the below instant messaging programs.
 					p Please be patient while waiting for response. (24/7 Support!) #[strong Phone General Inquiries: 1-888-123-4567-8900]
 					h5.heading--bordered Formularz #[strong kontaktowy]
-						a(href="#", title="Pokaż więcej informacji").dialog-helper: i(class="fa fa-question-circle-o" aria-hidden="true")
+						a(href="#", title="Pokaż więcej informacji").dialog-helper: i(class="fa fa-question" aria-hidden="true")
 					form.component.form.js-form.validateIt
 						.form-inner
 							.form-row
