--- a/dev/sass/site/components/_comp-info-box.scss
+++ b/dev/sass/site/components/_comp-info-box.scss
@@ -1,20 +1,27 @@
 .info-box {
-	padding: 15px;
+	$root: &;
+	padding: 0 10px;
 	@include media-breakpoint-down(sm) {
-		padding: 15px 5px;
+		padding: 0 5px;
 	}
 	&__inner {
 		@include transition;
 		position: relative;
-		border: 1px solid $brand-second;
+		border: 1px solid $gray-lighter;
+		cursor: pointer;
+		border-radius: $border-radius;
 		&:hover {
-			box-shadow: 0 10px 6px -6px #454545;
-			transform: translateY(-6px);
+			background-color: $gray-lighten;
+			#{$root}__link {
+				> a {
+					color: #fff;
+					background-color: $brand-primary;
+				}
+			}
 		}
 	}
 	&__image {
-		border-bottom: 1px solid $brand-second;
-		overflow: hidden;
+		border-bottom: 1px solid $gray-lighter;
 	}
 	&__content {
 		padding: $spacer-sm;
@@ -22,7 +29,7 @@
 	&__title {
 		font-weight: 300;
 		padding-bottom: $spacer-sm;
-		border-bottom: 1px solid $gray;
+		border-bottom: 1px solid $brand-second;
 	}
 	&__description {
 		font-weight: 300;
